[project]
name = "mac-sql-crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "crewai>=0.1.24",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "func-timeout>=4.3.5",
    "nltk>=3.9.1",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "sqlparse>=0.5.3",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]
